--- a/day3/apps/pipelines/cd-scm-visitreports.yaml
+++ b/day3/apps/pipelines/cd-scm-visitreports.yaml
@@ -2,7 +2,7 @@ pr: none
 trigger:
   branches:
     include:
-      - master
+      - main
   paths:
     include:
       - day3/apps/nodejs/visitreport/*
@@ -42,7 +42,7 @@ stages:
   - stage: Test
     displayName: Test
     dependsOn: Development
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
 
     jobs:
       - template: jobs/deploy-scm-visitreports.yaml
