--- a/day3/apps/pipelines/pr-validation-textanalytics.yaml
+++ b/day3/apps/pipelines/pr-validation-textanalytics.yaml
@@ -2,7 +2,7 @@ trigger: none
 pr:
   branches:
     include:
-      - master
+      - main
   paths:
     include:
       - day3/apps/nodejs/textanalytics/*
@@ -12,9 +12,9 @@ stages:
     displayName: Build
 
     jobs:
-    - job: Build
-      displayName: Build Scm Textanalytics
-      pool:
-        vmImage: ubuntu-latest
-      steps:
-        - template: ../nodejs/build/scm-ta-function.yaml
+      - job: Build
+        displayName: Build Scm Textanalytics
+        pool:
+          vmImage: ubuntu-latest
+        steps:
+          - template: ../nodejs/build/scm-ta-function.yaml
