--- a/day5/apps/pipelines/cd-scm-textanalytics.yaml
+++ b/day5/apps/pipelines/cd-scm-textanalytics.yaml
@@ -2,7 +2,7 @@ pr: none
 trigger:
   branches:
     include:
-      - master
+      - main
   paths:
     include:
       - day5/apps/nodejs/textanalytics/*
@@ -39,7 +39,7 @@ stages:
   - stage: Test
     displayName: Test
     dependsOn: Development
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
 
     jobs:
       - template: jobs/deploy-scm-ta-func.yaml
