--- a/day7/apps/pipelines/cd-scm-search-func.yaml
+++ b/day7/apps/pipelines/cd-scm-search-func.yaml
@@ -2,7 +2,7 @@ pr: none
 trigger:
   branches:
     include:
-      - master
+      - main
   paths:
     include:
       - day7/apps/dotnetcore/Scm.Search/Adc.Scm.Search.Indexer/*
