--- a/.github/workflows/.pages.yaml
+++ b/.github/workflows/.pages.yaml
@@ -3,10 +3,10 @@ name: pages
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
 
       - uses: actions/setup-node@v2.1.5
         with:
-          node-version: "12"
+          node-version: '12'
 
       - run: npm init -y
       - run: npm install vuepress vuepress-plugin-code-copy
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
 
-    if: ${{ github.ref == 'refs/heads/master' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
 
     steps:
       - name: Download build of static website
