--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.markdownlint": true
   },
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "azureFunctions.projectSubpath": "day2\\apps\\dotnetcore\\Scm.Resources\\Adc.Scm.Resources.ImageResizer",
+  "azureFunctions.deploySubpath": "day2\\apps\\dotnetcore\\Scm.Resources\\Adc.Scm.Resources.ImageResizer/bin/Release/net6.0/publish",
+  "azureFunctions.projectLanguage": "C#",
+  "azureFunctions.projectRuntime": "~4",
+  "azureFunctions.preDeployTask": "publish (functions)"
 }
