--- a/day2/apps/pipelines/cd-scm.yaml
+++ b/day2/apps/pipelines/cd-scm.yaml
@@ -2,7 +2,7 @@ pr: none
 trigger:
   branches:
     include:
-      - master
+      - main
   paths:
     include:
       - day2/apps/dotnetcore/Scm/*
