--- a/day7/apps/pipelines/cd-scm-resources.yaml
+++ b/day7/apps/pipelines/cd-scm-resources.yaml
@@ -2,7 +2,7 @@ pr: none
 trigger:
   branches:
     include:
-      - master
+      - main
   paths:
     include:
       - day7/apps/dotnetcore/Scm.Resources/Adc.Scm.Resources.Api/*
