--- a/.github/workflows/day4-scm-resourcesapi.yml
+++ b/.github/workflows/day4-scm-resourcesapi.yml
@@ -3,7 +3,7 @@ name: day4-scm-resourcesapi
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - day4/apps/infrastructure/bicep/resources/**
       - day4/apps/dotnetcore/Scm.Resources/**
@@ -11,7 +11,7 @@ on:
 
   pull_request:
     branches:
-      - master
+      - main
     paths:
       - day4/apps/infrastructure/bicep/resources/**
       - day4/apps/dotnetcore/Scm.Resources/**
@@ -20,17 +20,17 @@ on:
   workflow_dispatch:
 
 env:
-  API_PACKAGE_NAME: "scmresourcesapi.zip"
-  RESIZER_PACKAGE_NAME: "resizer.zip"
-  BICEP_FILE_NAME: "resourcesmain.bicep"
+  API_PACKAGE_NAME: 'scmresourcesapi.zip'
+  RESIZER_PACKAGE_NAME: 'resizer.zip'
+  BICEP_FILE_NAME: 'resourcesmain.bicep'
 
 jobs:
   build-bicep:
     if: github.repository == 'azuredevcollege/trainingdays'
     runs-on: ubuntu-latest
     env:
-      BICEP_FILE_PATH: "./day4/apps/infrastructure/bicep/resources/resourcesmain.bicep"
-      BICEP_MODULE_PATH: "./day4/apps/infrastructure/bicep/resources/"
+      BICEP_FILE_PATH: './day4/apps/infrastructure/bicep/resources/resourcesmain.bicep'
+      BICEP_MODULE_PATH: './day4/apps/infrastructure/bicep/resources/'
       NEED_DEPLOY: ${{ (github.event_name == 'push') || (github.event_name == 'workflow_dispatch') }}
 
     steps:
@@ -53,8 +53,8 @@ jobs:
     if: github.repository == 'azuredevcollege/trainingdays'
     runs-on: ubuntu-latest
     env:
-      API_PACKAGE_PATH: "publish/scmresourcesapi"
-      API_PROJECT_PATH: "./day4/apps/dotnetcore/Scm.Resources/Adc.Scm.Resources.Api"
+      API_PACKAGE_PATH: 'publish/scmresourcesapi'
+      API_PROJECT_PATH: './day4/apps/dotnetcore/Scm.Resources/Adc.Scm.Resources.Api'
       NEED_DEPLOY: ${{ (github.event_name == 'push') || (github.event_name == 'workflow_dispatch') }}
 
     steps:
@@ -69,7 +69,7 @@ jobs:
       - name: Use Cache
         uses: actions/cache@v2
         with:
-          path: "~/.nuget/packages"
+          path: '~/.nuget/packages'
           key: ${{ runner.os }}-nuget-${{ hashFiles('./day4/apps/dotnetcore/Scm.Resources/Adc.Scm.Resources.Api/packages.lock.json') }}
 
       - name: Build and publish SCM Resources API
@@ -89,7 +89,7 @@ jobs:
         if: env.NEED_DEPLOY == 'true'
         with:
           name: drop
-          path: "${{ env.API_PROJECT_PATH }}/${{ env.API_PACKAGE_PATH }}/${{ env.API_PACKAGE_NAME }}"
+          path: '${{ env.API_PROJECT_PATH }}/${{ env.API_PACKAGE_PATH }}/${{ env.API_PACKAGE_NAME }}'
           if-no-files-found: error
           retention-days: 30
 
@@ -97,8 +97,8 @@ jobs:
     if: github.repository == 'azuredevcollege/trainingdays'
     runs-on: ubuntu-latest
     env:
-      RESIZER_PACKAGE_PATH: "publish/resizer"
-      RESIZER_PROJECT_PATH: "./day4/apps/dotnetcore/Scm.Resources/Adc.Scm.Resources.ImageResizer"
+      RESIZER_PACKAGE_PATH: 'publish/resizer'
+      RESIZER_PROJECT_PATH: './day4/apps/dotnetcore/Scm.Resources/Adc.Scm.Resources.ImageResizer'
       NEED_DEPLOY: ${{ (github.event_name == 'push') || (github.event_name == 'workflow_dispatch') }}
 
     steps:
@@ -113,7 +113,7 @@ jobs:
       - name: Use Cache
         uses: actions/cache@v2
         with:
-          path: "~/.nuget/packages"
+          path: '~/.nuget/packages'
           key: ${{ runner.os }}-nuget-${{ hashFiles('./day4/apps/dotnetcore/Scm.Resources/Adc.Scm.Resources.ImageResizer/packages.lock.json') }}
 
       - name: Build and publish SCM ImageResizer
@@ -133,7 +133,7 @@ jobs:
         if: env.NEED_DEPLOY == 'true'
         with:
           name: drop
-          path: "${{ env.RESIZER_PROJECT_PATH }}/${{ env.RESIZER_PACKAGE_PATH }}/${{ env.RESIZER_PACKAGE_NAME }}"
+          path: '${{ env.RESIZER_PROJECT_PATH }}/${{ env.RESIZER_PACKAGE_PATH }}/${{ env.RESIZER_PACKAGE_NAME }}'
           if-no-files-found: error
           retention-days: 30
 
