--- a/.github/workflows/day5-scm-searchapi.yml
+++ b/.github/workflows/day5-scm-searchapi.yml
@@ -3,7 +3,7 @@ name: day5-scm-searchapi
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - day5/apps/infrastructure/bicep/search/**
       - day5/apps/dotnetcore/Scm.Search/**
@@ -11,7 +11,7 @@ on:
 
   pull_request:
     branches:
-      - master
+      - main
     paths:
       - day5/apps/infrastructure/bicep/search/**
       - day5/apps/dotnetcore/Scm.Search/**
@@ -20,17 +20,17 @@ on:
   workflow_dispatch:
 
 env:
-  API_PACKAGE_NAME: "scmsearchapi.zip"
-  INDEXER_PACKAGE_NAME: "indexer.zip"
-  BICEP_FILE_NAME: "searchmain.bicep"
+  API_PACKAGE_NAME: 'scmsearchapi.zip'
+  INDEXER_PACKAGE_NAME: 'indexer.zip'
+  BICEP_FILE_NAME: 'searchmain.bicep'
 
 jobs:
   build-bicep:
     if: github.repository == 'azuredevcollege/trainingdays'
     runs-on: ubuntu-latest
     env:
-      BICEP_FILE_PATH: "./day5/apps/infrastructure/bicep/search/searchmain.bicep"
-      BICEP_MODULE_PATH: "./day5/apps/infrastructure/bicep/search/"
+      BICEP_FILE_PATH: './day5/apps/infrastructure/bicep/search/searchmain.bicep'
+      BICEP_MODULE_PATH: './day5/apps/infrastructure/bicep/search/'
       NEED_DEPLOY: ${{ (github.event_name == 'push') || (github.event_name == 'workflow_dispatch') }}
 
     steps:
@@ -53,8 +53,8 @@ jobs:
     if: github.repository == 'azuredevcollege/trainingdays'
     runs-on: ubuntu-latest
     env:
-      API_PROJECT_PATH: "./day5/apps/dotnetcore/Scm.Search/Adc.Scm.Search.Api"
-      API_PACKAGE_PATH: "publish/scmsearchapi"
+      API_PROJECT_PATH: './day5/apps/dotnetcore/Scm.Search/Adc.Scm.Search.Api'
+      API_PACKAGE_PATH: 'publish/scmsearchapi'
       NEED_DEPLOY: ${{ (github.event_name == 'push') || (github.event_name == 'workflow_dispatch') }}
 
     steps:
@@ -69,7 +69,7 @@ jobs:
       - name: Use Cache
         uses: actions/cache@v2
         with:
-          path: "~/.nuget/packages"
+          path: '~/.nuget/packages'
           key: ${{ runner.os }}-nuget-${{ hashFiles('./day5/apps/dotnetcore/Scm.Search/Adc.Scm.Search.Api/packages.lock.json') }}
 
       - name: Build and publish SCM Search API
@@ -89,7 +89,7 @@ jobs:
         if: env.NEED_DEPLOY == 'true'
         with:
           name: drop
-          path: "${{ env.API_PROJECT_PATH }}/${{ env.API_PACKAGE_PATH }}/${{ env.API_PACKAGE_NAME }}"
+          path: '${{ env.API_PROJECT_PATH }}/${{ env.API_PACKAGE_PATH }}/${{ env.API_PACKAGE_NAME }}'
           if-no-files-found: error
           retention-days: 30
 
@@ -97,8 +97,8 @@ jobs:
     if: github.repository == 'azuredevcollege/trainingdays'
     runs-on: ubuntu-latest
     env:
-      INDEXER_PROJECT_PATH: "./day5/apps/dotnetcore/Scm.Search/Adc.Scm.Search.Indexer"
-      INDEXER_PACKAGE_PATH: "publish/indexer"
+      INDEXER_PROJECT_PATH: './day5/apps/dotnetcore/Scm.Search/Adc.Scm.Search.Indexer'
+      INDEXER_PACKAGE_PATH: 'publish/indexer'
       NEED_DEPLOY: ${{ (github.event_name == 'push') || (github.event_name == 'workflow_dispatch') }}
 
     steps:
@@ -113,7 +113,7 @@ jobs:
       - name: Use Cache
         uses: actions/cache@v2
         with:
-          path: "~/.nuget/packages"
+          path: '~/.nuget/packages'
           key: ${{ runner.os }}-nuget-${{ hashFiles('./day5/apps/dotnetcore/Scm.Search/Adc.Scm.Search.Indexer/packages.lock.json') }}
 
       - name: Build and publish Indexer
@@ -133,7 +133,7 @@ jobs:
         if: env.NEED_DEPLOY == 'true'
         with:
           name: drop
-          path: "${{ env.INDEXER_PROJECT_PATH }}/${{ env.INDEXER_PACKAGE_PATH }}/${{ env.INDEXER_PACKAGE_NAME }}"
+          path: '${{ env.INDEXER_PROJECT_PATH }}/${{ env.INDEXER_PACKAGE_PATH }}/${{ env.INDEXER_PACKAGE_NAME }}'
           if-no-files-found: error
           retention-days: 30
 
